@@ -19,7 +19,24 @@ end
 r.energy_required = 3
 r.results[1].amount = 1
 
+r = data.raw["recipe"]["flamethrower-ammo"]
+local found
+for i, component in pairs(r.ingredients) do
+    if component.name == "crude-oil" then
+        component.amount = 50
+        component.name = "light-oil"
+        found = true
+        break
+    end
+end
+if found then
+    table.insert(r.ingredients, {type="fluid", name="heavy-oil", amount=50})
+end
+
+
+
 if mods["bobwarfare"] then
+
     data.raw.technology["bob-robot-gun-drones"].hidden = true
     data.raw.technology["bob-robot-laser-drones"].hidden = true
     data.raw.technology["bob-robot-flamethrower-drones"].hidden = true
@@ -30,15 +47,8 @@ if mods["bobwarfare"] then
     hide_obj("bob-robot-gun-drone", "unit")
     data.raw.recipe["bob-robot-drone-frame"].hidden = true
     data.raw.recipe["bob-robot-drone-frame-large"].hidden = true
-    --[[data.raw.item["bob-robot-plasma-drone"].hidden = true
-    data.raw.item["bob-robot-flamethrower-drone"].hidden = true
-    data.raw.item["bob-robot-laser-drone"].hidden = true
-    data.raw.item["bob-robot-gun-drone"].hidden = true
-    data.raw.recipe["bob-robot-plasma-drone"].hidden = true
-    data.raw.recipe["bob-robot-flamethrower-drone"].hidden = true
-    data.raw.recipe["bob-robot-laser-drone"].hidden = true
-    data.raw.recipe["bob-robot-gun-drone"].hidden = true]]
-    --data.raw.item["bob-plutonium-239"].hidden = true
+
+
     data.raw.recipe["rocket"].hidden = true
     data.raw.ammo["rocket"].hidden = true
     data.raw.recipe["explosive-rocket"].hidden = true
